apps/calimmo/dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calimmo-dashboard
  namespace: calimmo
  labels:
    app: calimmo-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calimmo-dashboard
  template:
    metadata:
      labels:
        app: calimmo-dashboard
    spec:
      imagePullSecrets: 
        - name: harbor-cd-registry-secret
      containers:
      - name: calimmo-dashboard
        image: harbor.cagou.ovh/prod/calimmo-dashboard:main
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /api/stats
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/stats
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          # requests:
          #   memory: "256Mi"
          #   cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
      nodeSelector:
        kubernetes.io/arch: arm64

---
apiVersion: v1
kind: Service
metadata:
  name: calimmo-dashboard-service
  namespace: calimmo
spec:
  selector:
    app: calimmo-dashboard
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calimmo-dashboard-ingress
  namespace: calimmo
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: "security-oauth2-proxy@kubernetescrd"

spec:
  tls:
  - hosts:
    - calimmo.cagou.ovh
    secretName: calimmo-dashboard-tls
  rules:
  - host: calimmo.cagou.ovh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calimmo-dashboard-service
            port:
              number: 80
